# test/helpers/openapi.v3.json
@@ -717,52 +717,52 @@
           "type": "boolean"
         },
         "title": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/title"
+          "$ref": "#/json-schema/properties/title"
         },
         "multipleOf": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/multipleOf"
+          "$ref": "#/json-schema/properties/multipleOf"
         },
         "maximum": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/maximum"
+          "$ref": "#/json-schema/properties/maximum"
         },
         "exclusiveMaximum": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/exclusiveMaximum"
+          "$ref": "#/json-schema/properties/exclusiveMaximum"
         },
         "minimum": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/minimum"
+          "$ref": "#/json-schema/properties/minimum"
         },
         "exclusiveMinimum": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/exclusiveMinimum"
+          "$ref": "#/json-schema/properties/exclusiveMinimum"
         },
         "maxLength": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/maxLength"
+          "$ref": "#/json-schema/properties/maxLength"
         },
         "minLength": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/minLength"
+          "$ref": "#/json-schema/properties/minLength"
         },
         "pattern": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/pattern"
+          "$ref": "#/json-schema/properties/pattern"
         },
         "maxItems": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/maxItems"
+          "$ref": "#/json-schema/properties/maxItems"
         },
         "minItems": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/minItems"
+          "$ref": "#/json-schema/properties/minItems"
         },
         "uniqueItems": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/uniqueItems"
+          "$ref": "#/json-schema/properties/uniqueItems"
         },
         "maxProperties": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/maxProperties"
+          "$ref": "#/json-schema/properties/maxProperties"
         },
         "minProperties": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/minProperties"
+          "$ref": "#/json-schema/properties/minProperties"
         },
         "required": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/required"
+          "$ref": "#/json-schema/properties/required"
         },
         "enum": {
-          "$ref": "http://json-schema.org/draft-04/schema#/properties/enum"
+          "$ref": "#/json-schema/properties/enum"
         },
         "type": {
           "type": "string"
@@ -1212,5 +1212,142 @@
         }
       ]
     }
+  },
+  "json-schema": {
+    "id": "http://json-schema.org/draft-04/schema#",
+    "$schema": "http://json-schema.org/draft-04/schema#",
+    "description": "Core schema meta-schema",
+    "definitions": {
+      "schemaArray": {
+        "type": "array",
+        "minItems": 1,
+        "items": { "$ref": "#" }
+      },
+      "positiveInteger": {
+        "type": "integer",
+        "minimum": 0
+      },
+      "positiveIntegerDefault0": {
+        "allOf": [{ "$ref": "#/json-schema/definitions/positiveInteger" }, { "default": 0 }]
+      },
+      "simpleTypes": {
+        "enum": ["array", "boolean", "integer", "null", "number", "object", "string"]
+      },
+      "stringArray": {
+        "type": "array",
+        "items": { "type": "string" },
+        "minItems": 1,
+        "uniqueItems": true
+      }
+    },
+    "type": "object",
+    "properties": {
+      "id": {
+        "type": "string"
+      },
+      "$schema": {
+        "type": "string"
+      },
+      "title": {
+        "type": "string"
+      },
+      "description": {
+        "type": "string"
+      },
+      "default": {},
+      "multipleOf": {
+        "type": "number",
+        "minimum": 0,
+        "exclusiveMinimum": true
+      },
+      "maximum": {
+        "type": "number"
+      },
+      "exclusiveMaximum": {
+        "type": "boolean",
+        "default": false
+      },
+      "minimum": {
+        "type": "number"
+      },
+      "exclusiveMinimum": {
+        "type": "boolean",
+        "default": false
+      },
+      "maxLength": { "$ref": "#/json-schema/definitions/positiveInteger" },
+      "minLength": { "$ref": "#/json-schema/definitions/positiveIntegerDefault0" },
+      "pattern": {
+        "type": "string",
+        "format": "regex"
+      },
+      "additionalItems": {
+        "anyOf": [{ "type": "boolean" }, { "$ref": "#" }],
+        "default": {}
+      },
+      "items": {
+        "anyOf": [{ "$ref": "#" }, { "$ref": "#/json-schema/definitions/schemaArray" }],
+        "default": {}
+      },
+      "maxItems": { "$ref": "#/json-schema/definitions/positiveInteger" },
+      "minItems": { "$ref": "#/json-schema/definitions/positiveIntegerDefault0" },
+      "uniqueItems": {
+        "type": "boolean",
+        "default": false
+      },
+      "maxProperties": { "$ref": "#/json-schema/definitions/positiveInteger" },
+      "minProperties": { "$ref": "#/json-schema/definitions/positiveIntegerDefault0" },
+      "required": { "$ref": "#/json-schema/definitions/stringArray" },
+      "additionalProperties": {
+        "anyOf": [{ "type": "boolean" }, { "$ref": "#" }],
+        "default": {}
+      },
+      "definitions": {
+        "type": "object",
+        "additionalProperties": { "$ref": "#" },
+        "default": {}
+      },
+      "properties": {
+        "type": "object",
+        "additionalProperties": { "$ref": "#" },
+        "default": {}
+      },
+      "patternProperties": {
+        "type": "object",
+        "additionalProperties": { "$ref": "#" },
+        "default": {}
+      },
+      "dependencies": {
+        "type": "object",
+        "additionalProperties": {
+          "anyOf": [{ "$ref": "#" }, { "$ref": "#/json-schema/definitions/stringArray" }]
+        }
+      },
+      "enum": {
+        "type": "array",
+        "minItems": 1,
+        "uniqueItems": true
+      },
+      "type": {
+        "anyOf": [
+          { "$ref": "#/json-schema/definitions/simpleTypes" },
+          {
+            "type": "array",
+            "items": { "$ref": "#/json-schema/definitions/simpleTypes" },
+            "minItems": 1,
+            "uniqueItems": true
+          }
+        ]
+      },
+      "format": { "type": "string" },
+      "allOf": { "$ref": "#/json-schema/definitions/schemaArray" },
+      "anyOf": { "$ref": "#/json-schema/definitions/schemaArray" },
+      "oneOf": { "$ref": "#/json-schema/definitions/schemaArray" },
+      "not": { "$ref": "#" }
+    },
+    "dependencies": {
+      "exclusiveMaximum": ["maximum"],
+      "exclusiveMinimum": ["minimum"]
+    },
+    "default": {}
   }
 }
